[package]
name = "tasklet"
version = "0.2.2"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/stav121/tasklet"
readme = "README.md"
description = "An asynchronous task scheduling library"
keywords = ["cron", "scheduling", "tasks", "tasklet", "async"]

[dependencies]
cron = "0.12.1"
chrono = "0.4.38"
time = "0.3.36"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"

[dev-dependencies]
simple_logger = "5.0.0"
tokio-test = "0.4.4"