[package]
name = "tasklet"
version = "0.2.5"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
edition = "2021"
rust-version = "1.83.0"
license = "MIT"
repository = "https://github.com/stav121/tasklet"
readme = "README.md"
description = "An asynchronous task scheduling library"
keywords = ["cron", "scheduling", "tasks", "tasklet", "async"]

[dependencies]
cron = "0.15.0"
chrono = "0.4.39"
time = "0.3.37"
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"

[dev-dependencies]
simple_logger = "5.0.0"
tokio-test = "0.4.4"