[package]
name = "tasklet"
version = "0.2.9"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
edition = "2021"
rust-version = "1.85.1"
license = "MIT"
repository = "https://github.com/stav121/tasklet"
readme = "README.md"
description = "An asynchronous task scheduling library"
keywords = ["cron", "scheduling", "tasks", "tasklet", "async"]

[dependencies]
cron = "0.15.0"
chrono = "0.4.41"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
thiserror = "2.0.12"

[dev-dependencies]
simple_logger = "5.0.0"
tokio-test = "0.4.4"
